[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
bytecheck = "0.6.9"
arc-cache = "^0.2"
bincode = "^1.3"
flate2 = "^1.0"
futures = "^0.3"
hdrhistogram = "^7.5"
ipnet = {version = "^2.5", features = ["serde"]}
lazy_static = "^1.4"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
rand = "0.8.5"
rayon = "1.5"
regex = "1.6"
rkyv = { version = "0.7.39", features = ["validation"] }
serde = {version="^1.0", features = ["derive"]}
serde_json = "^1.0"
threadpool = "1.8"
tokio = { version = "^1.21", features = ["rt", "macros", "rt-multi-thread"] }
toml = "0.5"




