[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bitflags = "2.6.0"
arc-cache = "^0.2"
bincode = "^1.3"
flate2 = "1.0.33"
futures = "0.3.30"
hdrhistogram = "7.5.4"
ipnet = {version = "^2.9.0", features = ["serde"]}
lazy_static = "1.5.0"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.6"
rkyv = { version = "0.7.45", features = ["validation"] }
serde = {version="1.0.209", features = ["derive"]}
serde_json = "1.0.127"
thiserror = "1.0.63"
threadpool = "1.8"
tokio = { version = "^1.39.3", features = ["rt", "macros", "rt-multi-thread"] }
toml = "0.8.19"
quick-xml = { version = "0.36.1", features = ["serialize"] }
opentelemetry_sdk = "0.24.1"

