[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
bitflags = "2.6.0"
arc-cache = "0.2.6"
bincode = "1.3.3"
flate2 = "1.0.34"
futures = "0.3.31"
hdrhistogram = "7.5.4"
ipnet = {version = "2.10.1", features = ["serde"]}
lazy_static = "1.5.0"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.1"
rkyv = "0.8.8"
serde = {version="1.0.209", features = ["derive"]}
serde_json = "1.0.127"
thiserror = "2.0.3"
threadpool = "1.8"
tokio = { version = "^1.39.3", features = ["rt", "macros", "rt-multi-thread"] }
toml = "0.8.19"
quick-xml = { version = "0.37.0", features = ["serialize"] }
opentelemetry_sdk = "0.27.0"
hyper = { version = "1.4.1", features = ["server"] }
hyper-util = "0.1.7"
http-body-util  = "*"
bytes = "1.7.1"
jwt-simple = "0.12.10"
base64 = "0.22.1"

