[package]
name = "set02"
version = "0.1.0"
authors = ["Xun Gu <noguxun@gmaifl.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.14", features = ["rt", "macros", "rt-multi-thread"] }
reqwest = { version = "^0.11", features = ["json"] }
futures = "^0.3"
